--- a/configuration.in.example
+++ b/configuration.in.example
@@ -1,14 +1,14 @@
-Omega    =  1.0	
-kappa    = 0.0 	
-m        = 0.075 
-L        = 0.08 
-B1       = 0.0	
-B0       = 0.01 
-mu       = 0.2  
-theta0    = 1e-6 
-thetadot0 = 0.0
-sampling = 1  
-N_excit  = 0  
-Nperiod  = 3  
-nsteps   = 20 
-output   = Ex2.txt // name of the output file
+Omega = 14.142135623730951
+kappa = 0
+m = 0.075
+L = 0.08
+B1 = 0.02
+B0 = 0.01
+mu = 0.2
+theta0 = 1e-06
+thetadot0 = 0
+sampling = 1
+N_excit = 100
+Nperiod = 3
+nsteps = 20
+output = Ex2.txt // name of the output file
