update final des graphes

--- a/configuration.in.example
+++ b/configuration.in.example
@@ -2,16 +2,16 @@ Omega = 14.142135623730951
 kappa = 0
 m = 0.075
 L = 0.08
-B1 = 0.02
+B1 = 0.002
 B0 = 0.01
 mu = 0.2
-theta0 = 1e-06
+theta0 = 3.141592653589793
 thetadot0 = 0
 sampling = 1
-N_excit = 100
+N_excit = 1000
 Nperiod = 3
-nsteps = 20
-C=0
-alpha=0
-beta=0
+nsteps = 50
+C = 50
+alpha = 0
+beta = 0
 output = Ex2.txt // name of the output file
