--- a/configuration.in.example
+++ b/configuration.in.example
@@ -5,17 +5,17 @@ L = 0.08
 B1 = 0.002
 B0 = 0.01
 mu = 0.2
-theta0 = 3.141592653589793
+theta0 = 0.001
 thetadot0 = 0
 sampling = 1
-N_excit = 1000
+N_excit = 100
 Nperiod = 3
 nsteps = 50
-C = 50
+C = 0
 alpha = 0
 beta = 0
 nsteps = 50
-C = 50
+C = 0
 alpha = 0
 beta = 0
 gamma = 0
