--- a/configuration.in.example
+++ b/configuration.in.example
@@ -1,14 +1,14 @@
 Omega = 14.142135623730951
-kappa = 0
+kappa = 2e-05
 m = 0.075
 L = 0.08
-B1 = 0.002
+B1 = 0.018
 B0 = 0.01
 mu = 0.2
-theta0 = 0.001
-thetadot0 = 0
+theta0 = 0
+thetadot0 = -2
 sampling = 1
-N_excit = 100
+N_excit = 10000
 Nperiod = 3
 nsteps = 50
 C = 0
